Fixed footer letter-spacing

--- a/_sass/partials/footer.scss
+++ b/_sass/partials/footer.scss
@@ -22,7 +22,7 @@
         font-size: 15px;
         line-height: 1.6;
         font-weight: bold;
-        letter-spacing: 1.7px;
+        letter-spacing: .5px;
     }
 
     &__info {
@@ -167,7 +167,7 @@
     }
 
     &__col-title {
-        letter-spacing: 1.5px;
+        letter-spacing: .5px;
         font-size: 20px;
         margin: 0;
         margin-bottom: 8px;
